--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,14 @@ script:
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
+deploy:
+  provider: heroku
+  app: egc-alebangon-examen
+  strategy: git
+  api_key: 05d769aa-64e7-4d7a-8f42-645b2b257e81
+jobs:
+  include:
+    - script:
+      - cd decide
+      - coverage run --branch --source=. ./manage.py test authentication/ 
+
